finished table section on services page

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
           class="w-full flex justify-between items-center laptop:-w-[768px] text-yellow-400 bg-transparent py-4">
           <!-- Nav buttons start -->
           <ul class="flex flex-row phone:hidden smallTablet:flex">
+            <li></li>
             <li>
               <a
                 class="px-5 py-2 active:border-2 active:rounded-lg laptop:active:border-none laptop:active:text-white laptop:hover:border-t-4 border-yellow-500 ms-2 laptop:text-lg"
@@ -73,21 +74,21 @@
               <ul class="list-none m-0 p-0">
                 <li>
                   <a
-                    href="./index.html"
+                    href="/index.html"
                     class="block p-4 active:bg-black active:text-yellow-500 active:rounded-t-lg"
                     >Home</a
                   >
                 </li>
                 <li>
                   <a
-                    href="./src/pages/Services.html"
+                    href="/src/pages/Services.html"
                     class="block p-4 active:bg-black active:text-yellow-500"
                     >Services</a
                   >
                 </li>
                 <li>
                   <a
-                    href="./src/pages/Products.html"
+                    href="/src/pages/Products.html"
                     class="block p-4 active:bg-black active:text-yellow-500"
                     >Products</a
                   >
@@ -95,7 +96,7 @@
 
                 <li>
                   <a
-                    href="./src/pages/About.html"
+                    href="/src/pages/About.html"
                     class="block p-4 active:bg-black active:text-yellow-500 active:rounded-b-lg"
                     >About</a
                   >
