--- a/src/pages/Sign-up.html
+++ b/src/pages/Sign-up.html
@@ -73,21 +73,21 @@
               <ul class="list-none m-0 p-0">
                 <li>
                   <a
-                    href="./index.html"
+                    href="/index.html"
                     class="block p-4 active:bg-black active:text-yellow-500 active:rounded-t-lg"
                     >Home</a
                   >
                 </li>
                 <li>
                   <a
-                    href="./src/pages/Services.html"
+                    href="/src/pages/Services.html"
                     class="block p-4 active:bg-black active:text-yellow-500"
                     >Services</a
                   >
                 </li>
                 <li>
                   <a
-                    href="./src/pages/Products.html"
+                    href="/src/pages/Products.html"
                     class="block p-4 active:bg-black active:text-yellow-500"
                     >Products</a
                   >
@@ -95,7 +95,7 @@
 
                 <li>
                   <a
-                    href="./src/pages/About.html"
+                    href="/src/pages/About.html"
                     class="block p-4 active:bg-black active:text-yellow-500 active:rounded-b-lg"
                     >About</a
                   >
