--- a/src/pages/Login.html
+++ b/src/pages/Login.html
@@ -30,21 +30,21 @@
             <li>
               <a
                 class="px-5 py-2 hover:border-t-4 border-yellow-500 ms-2"
-                href="./Services.html"
+                href="/Services.html"
                 >Services</a
               >
             </li>
             <li>
               <a
                 class="px-5 py-2 hover:border-t-4 border-yellow-500 ms-2"
-                href="./Products.html"
+                href="/Products.html"
                 >Products</a
               >
             </li>
             <li>
               <a
                 class="px-5 py-2 hover:border-t-4 border-yellow-500 ms-2"
-                href="./About.html"
+                href="/About.html"
                 >About Us</a
               >
             </li>
