added custom font

--- a/index.html
+++ b/index.html
@@ -119,7 +119,8 @@
             class="font-sans phone:text-3xl smallTablet:text-5xl tablet:text-6xl text-slate-300 pt-4 text-center">
             Building <code class="text-yellow-500">the Future</code>
           </h1>
-          <p class="text-neutral-100 text-md text-center mb-5 mt-5 text-sm">
+          <p
+            class="text-neutral-100 text-md text-center mb-5 mt-5 text-sm font-FertigoPro">
             Welcome to the threshold of innovation and design, where we craft
             not just houses, but futuristic habitats that redefine the essence
             of home. At our core, we believe in a future where your living space
