--- a/src/pages/Products.html
+++ b/src/pages/Products.html
@@ -120,17 +120,19 @@
           <button
             class="absolute top-1 right-1 smallTablet:translate-y-[170px] smallPhone:translate-y-[120px]">
             <i
-              class="fa-solid fa-square-caret-right text-4xl text-yellow-500"></i>
+              class="fa-solid fa-square-caret-right text-4xl text-yellow-500 hover:animate-pulse"></i>
           </button>
 
           <button
             class="absolute top-1 left-1 smallTablet:translate-y-[170px] smallPhone:translate-y-[120px]">
             <i
-              class="fa-solid fa-square-caret-right text-4xl rotate-180 text-yellow-500"></i>
+              class="fa-solid fa-square-caret-right text-4xl rotate-180 text-yellow-500 hover:animate-pulse"></i>
           </button>
 
-          <h1 class="text-yellow-400 text-2xl p-2">The Arcadian Curve</h1>
-          <p class="text-white p-4">
+          <h1 class="text-yellow-400 text-2xl p-2 font-FertigoPro">
+            The Arcadian Curve
+          </h1>
+          <p class="text-white font-FertigoPro">
             Nestled amidst the dense foliage of the Carpathian Mountains, this
             visionary abode offers a serene retreat from the world. The
             structure boasts a sleek, elongated form that curves gently, echoing
@@ -161,8 +163,10 @@
 
           <div
             class="Card smallTablet:w-auto smallPhone:h-[200px] smallTablet:h-[300px] rounded-xl bg-[url('/src/assets/images/House02.png')] bg-cover bg-center"></div>
-          <h1 class="text-yellow-400 text-2xl p-2">Zenith Haven</h1>
-          <p class="text-white">
+          <h1 class="text-yellow-400 text-2xl p-2 font-FertigoPro">
+            Zenith Haven
+          </h1>
+          <p class="text-white font-FertigoPro">
             Emerging from the misty Carpathian landscape, this avant-garde
             dwelling, with its commanding cantilevered roofs, stands as a
             testament to architectural innovation. The juxtaposition of the
@@ -193,8 +197,10 @@
 
           <div
             class="Card smallTablet:w-auto smallPhone:h-[200px] smallTablet:h-[300px] rounded-xl bg-[url('/src/assets/images/House03.png')] bg-cover bg-center"></div>
-          <h1 class="text-yellow-400 text-2xl p-2">Cliffside Lumina</h1>
-          <p class="text-white">
+          <h1 class="text-yellow-400 text-2xl p-2 font-FertigoPro">
+            Cliffside Lumina
+          </h1>
+          <p class="text-white font-FertigoPro">
             Perched atop a rugged cliff, this modern architectural masterpiece
             stands as a beacon of contemporary luxury against the dramatic
             backdrop of mountain and sea. The house, with its clean lines and
@@ -226,8 +232,10 @@
 
           <div
             class="Card smallTablet:w-auto smallPhone:h-[200px] smallTablet:h-[400px] rounded-xl bg-[url('/src/assets/images/Hero.png')] bg-cover bg-center"></div>
-          <h1 class="text-yellow-400 text-2xl p-2">Emerald Whisper</h1>
-          <p class="text-white">
+          <h1 class="text-yellow-400 text-2xl p-2 font-FertigoPro">
+            Emerald Whisper
+          </h1>
+          <p class="text-white font-FertigoPro">
             This architectural marvel, cloaked in the enigmatic hues of
             twilight, stands as a bold statement of modernity amidst the
             whispering pines. Its striking contrast of vibrant teal and warm
