--- a/src/pages/Services.html
+++ b/src/pages/Services.html
@@ -114,13 +114,12 @@
         class="w-full h-auto bg-[url('/src/assets/images/Hero/Hero.png')] bg-[center] aspect-square object-cover bg-no-repeat rounded-xl flex justify-center items-center">
         <div
           class="w-full h-auto bg-transparent/40 backdrop-blur border-2 border-slate-400 rounded-2xl p-2">
-          <div class="overflow-x-auto relative">
+          <div
+            class="overflow-x-auto w-full smallPhone:h-[500px] smallTablet:h-auto">
             <table class="w-[100%] text-sm text-left text-gray-400">
               <thead class="text-xs uppercase bg-gray-700 text-gray-400">
                 <tr>
-                  <th scope="col" class="py-3 px-6 rounded-tl-xl w-[20%]">
-                    Name
-                  </th>
+                  <th scope="col" class="py-3 px-6 rounded-tl-xl">Name</th>
                   <th scope="col" class="py-3 px-6">Preview</th>
                   <th scope="col" class="py-3 px-6">Description</th>
                   <th scope="col" class="py-3 px-6 rounded-tr-xl">Price</th>
@@ -128,7 +127,8 @@
               </thead>
               <tbody>
                 <tr class="border-b bg-gray-800 border-gray-700">
-                  <td class="py-4 px-6 text-lg text-yellow-500">
+                  <td
+                    class="py-4 px-6 smallTablet:text-lg smallPhone:text-xs text-yellow-500 font-FertigoPro">
                     Arcadian Curve
                   </td>
                   <td class="py-4 px-6">
@@ -140,7 +140,7 @@
                     /></span>
                   </td>
                   <td class="py-4 px-6 text-xs">
-                    <ul class="list-disc">
+                    <ul class="list-disc font-FertigoPro">
                       <li>
                         Architecture Style: Modern, with a sleek, elongated form
                         that blends into the natural landscape.
@@ -168,7 +168,8 @@
                   <td class="py-4 px-6"></td>
                 </tr>
                 <tr class="bg-gray-800 border-b border-gray-700">
-                  <td class="py-4 px-6 text-lg text-yellow-500">
+                  <td
+                    class="py-4 px-6 smallTablet:text-lg smallPhone:text-xs text-yellow-500 font-FertigoPro">
                     Zenith Haven
                   </td>
                   <td class="py-4 px-6">
@@ -180,7 +181,7 @@
                     /></span>
                   </td>
                   <td class="py-4 px-6 text-xs">
-                    <ul class="list-disc">
+                    <ul class="list-disc font-FertigoPro">
                       <li>
                         Architecture Style: Avant-garde with bold, geometric
                         lines and cantilevered elements.
@@ -205,7 +206,8 @@
                   <td class="py-4 px-6"></td>
                 </tr>
                 <tr class="bg-gray-800 border-b border-gray-700">
-                  <td class="py-4 px-6 text-lg text-yellow-500">
+                  <td
+                    class="py-4 px-6 smallTablet:text-lg smallPhone:text-xs text-yellow-500 font-FertigoPro">
                     Cliffside Lumina
                   </td>
                   <td class="py-4 px-6">
@@ -217,7 +219,7 @@
                     /></span>
                   </td>
                   <td class="py-4 px-6 text-xs">
-                    <ul class="list-disc">
+                    <ul class="list-disc font-FertigoPro">
                       <li>
                         Architecture Style: Contemporary with clean lines and an
                         emphasis on horizontal planes.
@@ -243,7 +245,8 @@
                   <td class="py-4 px-6"></td>
                 </tr>
                 <tr class="bg-gray-800 border-gray-700">
-                  <td class="py-4 px-6 rounded-bl-xl text-lg text-yellow-500">
+                  <td
+                    class="py-4 px-6 rounded-bl-xl smallTablet:text-lg smallPhone:text-xs text-yellow-500 font-FertigoPro">
                     Emerald Whisper
                   </td>
                   <td class="py-4 px-6">
@@ -255,7 +258,7 @@
                     /></span>
                   </td>
                   <td class="py-4 px-6 text-xs">
-                    <ul class="list-disc">
+                    <ul class="list-disc font-FertigoPro">
                       <li>
                         Architecture Style: Futuristic, with an emphasis on
                         dynamic lighting and sleek forms.
