--- a/src/pages/Sign-up.html
+++ b/src/pages/Sign-up.html
@@ -118,7 +118,7 @@
             class="font-sans phone:text-xl smallTablet:text-xl tablet:text-2xl text-slate-300 pt-4 text-center">
             Create account
           </h1>
-
+          <form action="/submit-form" method="post">
           <div class="flex flex-col text-white text-sm px-5">
             <label class="ps-3" for="username" pattern="[A-Za-z]+"
               >First Name</label
@@ -143,7 +143,8 @@
               class="m-3 px-2 rounded-xl text-black focus:outline-none focus:border-yellow-500 focus:ring-2 focus:ring-yellow-500"
               type="email"
               id="email"
-              pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}" />
+              pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}"
+              title="Please enter a valid email address. e.g. user@example.com" />
 
             <label class="ps-3" for="password">Password</label>
             <input
@@ -160,11 +161,13 @@
 
           <div class="w-full h-[60px] flex justify-center">
             <button
+              type="submit"
               class="border-2 border-slate-100 rounded-2xl px-5 bg-yellow-500 text-black laptop:hover:bg-black laptop:hover:text-yellow-500 phone:active:bg-black phone:active:text-yellow-500">
-              Register
+              Sign Up
             </button>
           </div>
         </div>
+      </form>
       </section>
       <!-- Register section end -->
     </section>
