implemented grid table for mobile view instead of normal table

--- a/index.html
+++ b/index.html
@@ -24,28 +24,28 @@
             <li></li>
             <li>
               <a
-                class="px-5 py-2 active:border-2 active:rounded-lg laptop:active:border-none laptop:active:text-white laptop:hover:border-t-4 border-yellow-500 ms-2 laptop:text-lg"
+                class="font-FertigoPro px-5 py-2 active:border-2 active:rounded-lg laptop:active:border-none laptop:active:text-white laptop:hover:border-t-4 border-yellow-500 ms-2 laptop:text-lg"
                 href="/src/pages/../../index.html"
                 >Home</a
               >
             </li>
             <li>
               <a
-                class="px-5 py-2 active:border-2 active:rounded-lg laptop:active:border-none laptop:active:text-white laptop:hover:border-t-4 border-yellow-500 ms-2 laptop:text-lg"
+                class="font-FertigoPro px-5 py-2 active:border-2 active:rounded-lg laptop:active:border-none laptop:active:text-white laptop:hover:border-t-4 border-yellow-500 ms-2 laptop:text-lg"
                 href="/src/pages/Services.html"
                 >Services</a
               >
             </li>
             <li>
               <a
-                class="px-5 py-2 active:border-2 active:rounded-lg laptop:active:border-none laptop:active:text-white laptop:hover:border-t-4 border-yellow-500 ms-2 laptop:text-lg"
+                class="font-FertigoPro px-5 py-2 active:border-2 active:rounded-lg laptop:active:border-none laptop:active:text-white laptop:hover:border-t-4 border-yellow-500 ms-2 laptop:text-lg"
                 href="/src/pages/Products.html"
                 >Products</a
               >
             </li>
             <li>
               <a
-                class="px-5 py-2 active:border-2 active:rounded-lg laptop:active:border-none laptop:active:text-white laptop:hover:border-t-4 border-yellow-500 ms-2 laptop:text-lg"
+                class="font-FertigoPro px-5 py-2 active:border-2 active:rounded-lg laptop:active:border-none laptop:active:text-white laptop:hover:border-t-4 border-yellow-500 ms-2 laptop:text-lg"
                 href="/src/pages/About.html"
                 >About Us</a
               >
@@ -75,21 +75,21 @@
                 <li>
                   <a
                     href="/index.html"
-                    class="block p-4 active:bg-black active:text-yellow-500 active:rounded-t-lg"
+                    class="font-FertigoPro block p-4 active:bg-black active:text-yellow-500 active:rounded-t-lg"
                     >Home</a
                   >
                 </li>
                 <li>
                   <a
                     href="/src/pages/Services.html"
-                    class="block p-4 active:bg-black active:text-yellow-500"
+                    class="font-FertigoPro block p-4 active:bg-black active:text-yellow-500"
                     >Services</a
                   >
                 </li>
                 <li>
                   <a
                     href="/src/pages/Products.html"
-                    class="block p-4 active:bg-black active:text-yellow-500"
+                    class="font-FertigoPro block p-4 active:bg-black active:text-yellow-500"
                     >Products</a
                   >
                 </li>
@@ -97,7 +97,7 @@
                 <li>
                   <a
                     href="/src/pages/About.html"
-                    class="block p-4 active:bg-black active:text-yellow-500 active:rounded-b-lg"
+                    class="font-FertigoPro block p-4 active:bg-black active:text-yellow-500 active:rounded-b-lg"
                     >About</a
                   >
                 </li>
