--- a/src/pages/About.html
+++ b/src/pages/About.html
@@ -23,28 +23,28 @@
           <ul class="flex flex-row phone:hidden smallTablet:flex">
             <li>
               <a
-                class="px-5 py-2 active:border-2 active:rounded-lg laptop:active:border-none laptop:active:text-white laptop:hover:border-t-4 border-yellow-500 ms-2 laptop:text-lg"
+                class="font-FertigoPro px-5 py-2 active:border-2 active:rounded-lg laptop:active:border-none laptop:active:text-white laptop:hover:border-t-4 border-yellow-500 ms-2 laptop:text-lg"
                 href="/src/pages/../../index.html"
                 >Home</a
               >
             </li>
             <li>
               <a
-                class="px-5 py-2 active:border-2 active:rounded-lg laptop:active:border-none laptop:active:text-white laptop:hover:border-t-4 border-yellow-500 ms-2 laptop:text-lg"
+                class="font-FertigoPro px-5 py-2 active:border-2 active:rounded-lg laptop:active:border-none laptop:active:text-white laptop:hover:border-t-4 border-yellow-500 ms-2 laptop:text-lg"
                 href="/src/pages/Services.html"
                 >Services</a
               >
             </li>
             <li>
               <a
-                class="px-5 py-2 active:border-2 active:rounded-lg laptop:active:border-none laptop:active:text-white laptop:hover:border-t-4 border-yellow-500 ms-2 laptop:text-lg"
+                class="font-FertigoPro px-5 py-2 active:border-2 active:rounded-lg laptop:active:border-none laptop:active:text-white laptop:hover:border-t-4 border-yellow-500 ms-2 laptop:text-lg"
                 href="/src/pages/Products.html"
                 >Products</a
               >
             </li>
             <li>
               <a
-                class="px-5 py-2 active:border-2 active:rounded-lg laptop:active:border-none laptop:active:text-white laptop:hover:border-t-4 border-yellow-500 ms-2 laptop:text-lg"
+                class="font-FertigoPro px-5 py-2 active:border-2 active:rounded-lg laptop:active:border-none laptop:active:text-white laptop:hover:border-t-4 border-yellow-500 ms-2 laptop:text-lg"
                 href="/src/pages/About.html"
                 >About Us</a
               >
@@ -61,7 +61,7 @@
           <!-- Sign up End -->
 
           <!-- Mobile menu starts-->
-          <div class="relative smallTablet:hidden">
+          <div class="relative smallTablet:hidden z-50">
             <input class="peer hidden" type="checkbox" id="menuToggle" />
 
             <label
@@ -73,30 +73,30 @@
               <ul class="list-none m-0 p-0">
                 <li>
                   <a
-                    href="./index.html"
-                    class="block p-4 active:bg-black active:text-yellow-500 active:rounded-t-lg"
+                    href="/index.html"
+                    class="font-FertigoPro block p-4 active:bg-black active:text-yellow-500 active:rounded-t-lg"
                     >Home</a
                   >
                 </li>
                 <li>
                   <a
-                    href="./src/pages/Services.html"
-                    class="block p-4 active:bg-black active:text-yellow-500"
+                    href="/src/pages/Services.html"
+                    class="font-FertigoPro block p-4 active:bg-black active:text-yellow-500"
                     >Services</a
                   >
                 </li>
                 <li>
                   <a
-                    href="./src/pages/Products.html"
-                    class="block p-4 active:bg-black active:text-yellow-500"
+                    href="/src/pages/Products.html"
+                    class="font-FertigoPro block p-4 active:bg-black active:text-yellow-500"
                     >Products</a
                   >
                 </li>
 
                 <li>
                   <a
-                    href="./src/pages/About.html"
-                    class="block p-4 active:bg-black active:text-yellow-500 active:rounded-b-lg"
+                    href="/src/pages/About.html"
+                    class="font-FertigoPro block p-4 active:bg-black active:text-yellow-500 active:rounded-b-lg"
                     >About</a
                   >
                 </li>
