--- a/src/pages/Sign-up.html
+++ b/src/pages/Sign-up.html
@@ -23,28 +23,28 @@
           <ul class="flex flex-row phone:hidden smallTablet:flex">
             <li>
               <a
-                class="px-5 py-2 active:border-2 active:rounded-lg laptop:active:border-none laptop:active:text-white laptop:hover:border-t-4 border-yellow-500 ms-2 laptop:text-lg"
+                class="font-FertigoPro px-5 py-2 active:border-2 active:rounded-lg laptop:active:border-none laptop:active:text-white laptop:hover:border-t-4 border-yellow-500 ms-2 laptop:text-lg"
                 href="/src/pages/../../index.html"
                 >Home</a
               >
             </li>
             <li>
               <a
-                class="px-5 py-2 active:border-2 active:rounded-lg laptop:active:border-none laptop:active:text-white laptop:hover:border-t-4 border-yellow-500 ms-2 laptop:text-lg"
+                class="font-FertigoPro px-5 py-2 active:border-2 active:rounded-lg laptop:active:border-none laptop:active:text-white laptop:hover:border-t-4 border-yellow-500 ms-2 laptop:text-lg"
                 href="/src/pages/Services.html"
                 >Services</a
               >
             </li>
             <li>
               <a
-                class="px-5 py-2 active:border-2 active:rounded-lg laptop:active:border-none laptop:active:text-white laptop:hover:border-t-4 border-yellow-500 ms-2 laptop:text-lg"
+                class="font-FertigoPro px-5 py-2 active:border-2 active:rounded-lg laptop:active:border-none laptop:active:text-white laptop:hover:border-t-4 border-yellow-500 ms-2 laptop:text-lg"
                 href="/src/pages/Products.html"
                 >Products</a
               >
             </li>
             <li>
               <a
-                class="px-5 py-2 active:border-2 active:rounded-lg laptop:active:border-none laptop:active:text-white laptop:hover:border-t-4 border-yellow-500 ms-2 laptop:text-lg"
+                class="font-FertigoPro px-5 py-2 active:border-2 active:rounded-lg laptop:active:border-none laptop:active:text-white laptop:hover:border-t-4 border-yellow-500 ms-2 laptop:text-lg"
                 href="/src/pages/About.html"
                 >About Us</a
               >
@@ -74,21 +74,21 @@
                 <li>
                   <a
                     href="/index.html"
-                    class="block p-4 active:bg-black active:text-yellow-500 active:rounded-t-lg"
+                    class="font-FertigoPro block p-4 active:bg-black active:text-yellow-500 active:rounded-t-lg"
                     >Home</a
                   >
                 </li>
                 <li>
                   <a
                     href="/src/pages/Services.html"
-                    class="block p-4 active:bg-black active:text-yellow-500"
+                    class="font-FertigoPro block p-4 active:bg-black active:text-yellow-500"
                     >Services</a
                   >
                 </li>
                 <li>
                   <a
                     href="/src/pages/Products.html"
-                    class="block p-4 active:bg-black active:text-yellow-500"
+                    class="font-FertigoPro block p-4 active:bg-black active:text-yellow-500"
                     >Products</a
                   >
                 </li>
@@ -96,7 +96,7 @@
                 <li>
                   <a
                     href="/src/pages/About.html"
-                    class="block p-4 active:bg-black active:text-yellow-500 active:rounded-b-lg"
+                    class="font-FertigoPro block p-4 active:bg-black active:text-yellow-500 active:rounded-b-lg"
                     >About</a
                   >
                 </li>
@@ -163,7 +163,7 @@
             <button
               type="submit"
               class="border-2 border-slate-100 rounded-2xl px-5 bg-yellow-500 text-black laptop:hover:bg-black laptop:hover:text-yellow-500 phone:active:bg-black phone:active:text-yellow-500">
-              Sign Up
+              Register
             </button>
           </div>
         </div>
