--- a/src/pages/About.html
+++ b/src/pages/About.html
@@ -110,16 +110,16 @@
 
       <!-- About section starts -->
       <section
-        role="Register"
+        role="About Page"
         class="w-full bg-[url('/src/assets/images/Hero/Hero.png')] bg-[center] aspect-square h-[760px] object-cover bg-no-repeat rounded-xl flex justify-center items-center">
         <div
-          class="max-w-[800px] tablet:w-[800px] smallPhone:w-[600px] h-[500px] bg-transparent/40 backdrop-blur border-2 border-slate-400 rounded-2xl p-4 text-white">
+          class="max-w-[800px] tablet:w-[800px] smallPhone:w-[600px] smallPhone:h-[700px] h-[500px] bg-transparent/40 backdrop-blur border-2 border-slate-400 rounded-2xl p-4 text-white">
           <h1 class="text-2xl pb-[20px]">
             Welcome to
             <code class="text-yellow-500">Zenith Living Designs</code>
           </h1>
 
-          <p class="smallPhone:text-sm laptop:text-md">
+          <p class="smallPhone:text-sm laptop:text-md font-FertigoPro">
             We are the vanguard of living space evolution, pioneering the
             integration of state-of-the-art technology with sustainable living.
             Our company was born out of a passion for innovation and a deep
