--- a/src/pages/Services.html
+++ b/src/pages/Services.html
@@ -290,7 +290,7 @@
 
           <!-- Grid Table implementation starts -->
           <div
-            class="grid gap-4 smallPhone::grid-cols-2 smallTablet:grid-cols-2 laptop::hidden">
+            class="grid gap-4 smallPhone::grid-cols-2 smallTablet:grid-cols-2 laptop:hidden">
             <div class="bg-gray-800 rounded-xl p-4">
               <img
                 src="../assets/images/House01.png"
